# meow

./: LICENSE.txt  README.md  pyproject.toml
.github/workflows/: package-publish.yml  publish.yml  test.yml
meow/: __about__.py  __init__.py
meow/password/: __init__.py  passwords.py
tests/: __init__.py  test_module.py
