[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meow"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Rashicom", email = "rashid.kp484@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pytest",
]

[project.urls]
Documentation = "https://github.com/Rashicom/meow#readme"
Issues = "https://github.com/Rashicom/meow/issues"
Source = "https://github.com/Rashicom/meow"

[tool.hatch.version]
path = "meow/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:meow tests}"

[tool.coverage.run]
source_pkgs = ["meow", "tests"]
branch = true
parallel = true
omit = [
  "meow/__about__.py",
]

[tool.coverage.paths]
meow = ["meow", "*/meow"]
tests = ["tests", "*/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]


[tool.hatch.envs.test]
dependencies = [
  "pytest",
  "pytest-cov"
]